--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -1,10 +1,3 @@
 <h1>Add A Flat</h1>
-<%= simple_form_for @flat do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :description %>
-  <%= f.input :price_per_night %>
-  <%= f.input :number_of_guests %>
-  <%= f.submit %>
-<% end %>
+<%= render 'form' %>
 <%= link_to 'Back', flats_path %>
