--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -16,4 +16,5 @@
   </ul>
 </div>
 
-<p><%= link_to 'Edit', edit_flat_path(@flat) %> | <%= link_to 'Back', flats_path %></p>
+<p><%= link_to 'Edit', edit_flat_path(@flat) %> | <%= link_to 'Back', flats_path %> |
+ <%= link_to 'Delete', flat_path(@flat), method: :delete, data: { confirm: "Delete #{@flat.name}?" } %></p>
