--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,8 @@
  *= require_tree .
  *= require_self
  */
+ @import 'flats';
+
 body {
   margin: 0;
 }
@@ -25,7 +27,4 @@ body {
 }
 h3 {
   font-weight: lighter;
-}
-.container {
-  width: 200px;
 }
