--- a/app/assets/stylesheets/flats.scss
+++ b/app/assets/stylesheets/flats.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the flats controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.flex {
+  display: flex;
+}
+.card-content {
+  background-color: rgb(245, 245, 245);
+  padding: 24px;
+}
+.card-actions {
+  padding: 16px 24px;
+}
