--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v6.0.0/css/all.css">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -13,9 +14,19 @@
 
   <body>
     <div class="header">
-      <h3>Simple Airbnb</h3>
-      <h3><i class="fa-regular fa-square-plus"></i>  <%= link_to 'Add A Flat', new_flat_path %></h3>
+      <h3><%= link_to "Simple Airbnb", flats_path, class: 'navbar-brand' %></h3>
+      <div>
+        <div class="ms-auto flex">
+          <form class="flex my-2 my-lg-0">
+            <input type="search" class="form-control me-2" placeholder="Search"
+            aria-label="Search" value="<%= params[:query] %>">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+          <h3><%= link_to 'Add A Flat', new_flat_path, class: 'navbar-brand' %></h3>
+        </div>
+      </div>
     </div>
+
     <%= yield %>
   </body>
 </html>
