--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -18,6 +18,7 @@
     <% @flats.each do |flat| %>
       <div class="col-md-4">
         <div class="card">
+          <div class="flat-image" style="background-image: url(https://source.unsplash.com/random)"></div>
           <div class="card-content">
             <h4><%= flat.name %></h4>
             <p><%= flat.address %></p>
@@ -32,8 +33,8 @@
           </div>
           <div class="card-actions">
             <%= link_to "Details", flat_path(flat) %>
-            <%= link_to "Edit", edit_flat_path(flat) %>
-            <%= link_to 'Delete', flat_path(flat),
+            <%= link_to "Edit", edit_flat_path(flat), class: 'ms-3 text-warning' %>
+            <%= link_to 'Delete', flat_path(flat), class: 'ms-3 text-danger',
                 method: :delete, data: { confirm: "Delete #{flat.name}?" }
             %>
           </div>
