--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,20 +1,57 @@
-<div class="section">
-  <h1><%= @flat.name %></h1>
-  <p><%= @flat.address %></p>
-</div>
+<div class="show-bg" style="background-image: url(https://source.unsplash.com/random)"></div>
 
-<div class="section">
-  <h3>A bit more about this flat:</h3>
-  <p><%= @flat.description %></p>
-</div>
+<div class="container mt-negative">
+  <div class="row">
+    <div class="col-8">
+      <div class="show-card">
+        <h1><%= @flat.name %></h1>
+        <p><%= @flat.address %></p>
+      </div>
+      <div class="show-card">
+        <h3>A bit more about this flat:</h3>
+        <p><%= @flat.description %></p>
+        <div class="map" style="background-image: url('https://maps.googleapis.com/maps/api/staticmap?center=<%= @flat.address %>&zoom=13&scale=2&size=1000x1000&maptype=roadmap&markers=color:red%7C<%= @flat.address %>&key=AIzaSyBtaHK-BLhBg7TruJu8iKk_wETqZMJM-GY')"></div>
+      </div>
+    </div>
 
-<div class="section">
-  <h3>Details:</h3>
-  <ul class="details">
-    <li><i class="fa-solid fa-user-check"></i> <%= @flat.number_of_guests %></li>
-    <li><i class="fa-solid fa-dollar-sign"></i> <%= @flat.price_per_night %></li>
-  </ul>
-</div>
+    <div class="col-4">
+      <div class="show-card">
+        <h5>Book this place!</h5>
+        <form action="">
+          <div class="input-group">
+            <span class="input-text">From:</span>
+            <input type="text" class="form-control" placeholder="20/04/2022">
+          </div>
+          <div class="input-group">
+            <span class="input-text">To:</span>
+            <input type="text" class="form-control mt-2" placeholder="27/04/2022">
+          </div>
+          <input type="submit" value="Book" class="btn btn-success mt-2" style="width :100%">
+        </form>
+      </div>
+      <div class="show-card">
+        <h3>Details</h3>
+        <div class="flex">
+          <div class="flex">
+            <i class="fa-solid fa-user-check me-2"></i> <%= @flat.number_of_guests %>
+          </div>
+          <div class="flex ms-3">
+            <i class="fa-solid fa-dollar-sign me-2"></i> <%= @flat.price_per_night %>
+          </div>
+        </div>
+      </div>
 
-<p><%= link_to 'Edit', edit_flat_path(@flat) %> | <%= link_to 'Back', flats_path %> |
- <%= link_to 'Delete', flat_path(@flat), method: :delete, data: { confirm: "Delete #{@flat.name}?" } %></p>
+      <div class="show-card">
+        <div class="flex-align">
+          <h6>Share</h6>
+          <div class="flex">
+            <i class="fa-brands fa-facebook-square fa-2x me-2"></i>
+            <i class="fa-brands fa-twitter-square fa-2x me-2"></i>
+            <i class="fa-brands fa-pinterest-square fa-2x me-2"></i>
+            <i class="fa fa-envelope-square fa-2x"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
